# marquette

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/workflows/: linting.yml  main.yml
docs/functions/: create_edges.md
docs/quickstart/: index.md
marquette/: __main__.py  map.py
marquette/conf/: config.yaml
marquette/conf/obs_ref/: README.md  chapter_2_exp.csv  grdc_conus_v1.csv  obs_2860.csv  obs_4000.csv  obs_4985.csv  obs_5000.csv  obs_v5_3000.csv  obs_v6_2995.csv  obs_v7_2000.csv
marquette/conf/saved_configs/: gages_3000.yaml  (+8 more)
marquette/hydrofabric/: _graph.py  _network.py  map.py
marquette/merit/: _TM_calculations.py  __init__.py  _connectivity_matrix.py  _edge_calculations.py  _graph.py  _map_lake_points.py  _streamflow_conversion_functions.py  create.py  extensions.py  map.py  post_process.py
marquette/merit_s3/: _TM_calculations.py  _connectivity_matrix.py  _edge_calculations.py  _map_lake_points.py  _streamflow_conversion_functions.py  create.py
notebooks/: build_merit_edges.ipynb  create_HUC_and_MERIT_TM.ipynb  create_chapter_2_obs.ipynb  create_giant_network.ipynb  create_merit_TM.ipynb  create_obs_csv.ipynb  gage_csv_filtering.ipynb  map_streamflow_to_flowlines.ipynb  matrix_mult.ipynb  split_zones.ipynb
scripts/: create_total_drainage_areas.py  hydrolakes_to_zarr.py  icechunk_quickstart.py  swot_width_depth_to_zarr.py  swot_width_to_zarr.py
tests/: conftest.py  fixtures.py  test_extensions.py
tests/validated_data/: q_prime_89905.npy
(+99 files in other folders)
